--- a/index.html
+++ b/index.html
@@ -577,42 +577,14 @@ var lang = usrlang;
 
 
 <center><button  id="TokenSubmit" class="btn btn-primary ml-auto" type="button" title="Next">Create Token</button></center>
-
 </form>
-
 </div>
-
-
 <p class="card-text">
-
-
-
 </p>
-
-
-
 </div>
 </div>
 
 <main class="container">
-
-	<div class=" px-3 py-3 pt-md-5 pb-md-4 mx-auto">
-		<!--.........................-->
-
-
-
-
-
-
-
-
-
-
-	</div>
-
-
-
-
 </div>
 
 
@@ -630,16 +602,15 @@ var lang = usrlang;
 
 
 
-<br><br><br><br><br> 
 
   <!-- Footer -->
-<footer class="pt-2 my-md-5   shadow">
+<footer class="ml-auto center  shadow">
     <div class="container  text-white">
-        <footer class="py-5">
-            <div class="row">
+        <footer class="">
+            <div class="row mx-5 px-5">
 
-            <div class="d-flex justify-content-between text-dark py-4 my-4  ">
-                <p>Made with 💜 by Aman.eth</p>
+            <div class="d-flex justify-content-between px-5 mx-5 text-dark   ">
+                <p class=" mx-5 px-5">Made with 💜 by Aman.eth</p>
             </div>
         </footer>
     </div>
